--- a/res/layout/activity_game_guess.xml
+++ b/res/layout/activity_game_guess.xml
@@ -9,7 +9,7 @@
     tools:context=".GameGuessActivity" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/words"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
