--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -55,24 +55,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/imageButton2"
-        android:layout_centerHorizontal="true"
+        android:layout_alignLeft="@+id/button_game_collect"
+        android:layout_alignRight="@+id/button_game_collect"
         android:text="@string/game_guess" />
 
     <Button
         android:id="@+id/button_game_collect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button_game_guess"
+        android:layout_alignLeft="@+id/button_game_remember"
+        android:layout_alignRight="@+id/button_game_remember"
         android:layout_alignTop="@+id/imageButton2"
         android:text="@string/game_collect" />
-
-    <Button
-        android:id="@+id/button_dictionary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="@string/dictionary" />
 
     <Button
         android:id="@+id/button_game_remember"
@@ -81,5 +75,14 @@
         android:layout_above="@+id/button_dictionary"
         android:layout_centerHorizontal="true"
         android:text="@string/game_remember" />
+
+    <Button
+        android:id="@+id/button_dictionary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button_game_remember"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/button_game_remember"
+        android:text="@string/dictionary" />
 
 </RelativeLayout>
