--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/textView2"
         android:layout_marginRight="35dp"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/menu_info" />
 
     <ImageButton
         android:id="@+id/imageButton2"
@@ -31,24 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/imageButton1"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_launcher" />
-
-    <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageButton2"
-        android:layout_below="@+id/button3"
-        android:src="@drawable/ic_launcher" />
-
-    <ImageButton
-        android:id="@+id/imageButton4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignTop="@+id/textView2"
-        android:layout_marginLeft="14dp"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/main_menu_button" />
 
     <Button
         android:id="@+id/button_game_guess"
