--- a/res/layout/activity_results.xml
+++ b/res/layout/activity_results.xml
@@ -3,7 +3,11 @@
     android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
     <TextView
         android:id="@+id/textView2"
@@ -13,26 +17,6 @@
         android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:text="@string/result"
         android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <Button
-        android:id="@+id/back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="16dp"
-        android:text="В меню" />
-
-    <TextView
-        android:id="@+id/words"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="false"
-        android:layout_below="@+id/back"
-        android:layout_centerInParent="true"
-        android:layout_centerVertical="false"
-        android:layout_marginTop="23dp"
-        android:text="TextView" />
 
     <ProgressBar
         android:id="@+id/bar1"
@@ -48,9 +32,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/bar1"
+        android:layout_alignTop="@+id/LinearLayout1"
         android:layout_marginRight="43dp"
-        android:layout_marginTop="19dp"
         android:orientation="vertical" >
 
         <TextView
@@ -70,12 +53,28 @@
             android:text="TextView" />
     </LinearLayout>
 
+    <ImageButton
+        android:id="@+id/imageMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/main_menu_button" />
+
+    <TextView
+        android:id="@+id/words"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_below="@+id/imageMenu"
+        android:text="TextView" />
+
     <LinearLayout
         android:id="@+id/LinearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/back"
-        android:layout_alignTop="@+id/linearLayout2"
+        android:layout_alignLeft="@+id/imageMenu"
+        android:layout_below="@+id/bar1"
         android:orientation="vertical" >
 
         <TextView
@@ -107,7 +106,6 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="156dp"
             android:layout_height="wrap_content" />
-
     </LinearLayout>
 
 </RelativeLayout>
